--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <tr>
                         <td>Java</td>
                         <td>⭐⭐⭐⭐⭐</td>
-                    </tr>
+                    </tr>https://github.com/cisjacob/cv/blob/main/index.html
 
                     <tr>
                         <td>NODE</td>
@@ -87,6 +87,11 @@
                         <td>⭐⭐⭐⭐</td>
                     </tr>
                 </table>
+                
+                <tr>
+                    <td></td>
+                    <td>Practice only what's shown is not real lol</td>
+                </tr>
             </td>
             
         </tr>
